update DESUtil